--- a/charts/thoras/tests/api_v2_deployment_test.yaml
+++ b/charts/thoras/tests/api_v2_deployment_test.yaml
@@ -1,24 +1,19 @@
 suite: Dashboard
 templates:
-  - dashboard/deployment.yaml
+  - api-server-v2/deployment.yaml
 tests:
   - it: Deployment name and image should be correct
     set:
       thorasVersion: TEST
-      thorasDashboard:
-        replicas: 12
     asserts:
       - isKind:
           of: Deployment
       - equal:
           path: metadata.name
-          value: thoras-dashboard
+          value: thoras-api-server-v2
       - equal:
           path: spec.template.spec.containers[0].image
-          value: us-east4-docker.pkg.dev/thoras-registry/platform/thoras-dashboard:TEST
-      - equal:
-          path: spec.replicas
-          value: 12
+          value: us-east4-docker.pkg.dev/thoras-registry/platform/services:TEST
       - equal:
           path: spec.template.spec.volumes[0].name
           value: tls
@@ -27,7 +22,13 @@ tests:
           value: thoras-api-server-cert
       - equal:
           path: spec.template.spec.containers[0].volumeMounts[0].mountPath
-          value: /app/tls.crt
+          value: /app/cert.pem
       - equal:
           path: spec.template.spec.containers[0].volumeMounts[0].name
+          value: tls
+      - equal:
+          path: spec.template.spec.containers[0].volumeMounts[1].mountPath
+          value: /app/key.pem
+      - equal:
+          path: spec.template.spec.containers[0].volumeMounts[1].name
           value: tls
