--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -132,16 +132,17 @@ thorasAgent:
   containerPort: 9100
   podAnnotations: {}
 
-thorasReasoningApi:
-  enabled: false
-  podAnnotations: {}
-  containerPort: 8080
-  port: 80
-  limits:
-    memory: 2048Mi
-  requests:
-    cpu: 128m
-    memory: 8Mi
+thorasReasoning:
   connectors:
     prometheus:
       baseUrl: "http://localhost"
+  api:
+    enabled: false
+    podAnnotations: {}
+    containerPort: 8080
+    port: 80
+    limits:
+      memory: 2048Mi
+    requests:
+      cpu: 128m
+      memory: 8Mi
