Move migration into the same pod that owns the PVC

--- a/charts/thoras/templates/collector/secret.yaml
+++ b/charts/thoras/templates/collector/secret.yaml
@@ -21,4 +21,4 @@ data:
   {{- $secretData := (get $secretObj "data") | default dict }}
   {{- $pgPassword := (get $secretData "password") | default ((.Values.metricsCollector.timescale.password | default $newPgPassword) | b64enc) }}
   password: {{ $pgPassword | quote }}
-  host: {{ (printf "postgres://postgres:%s@%s:%d?sslmode=disable" ($pgPassword | b64dec) .Values.metricsCollector.timescale.name (.Values.metricsCollector.timescale.containerPort | int)) | b64enc | quote }}
+  host: {{ (printf "postgres://postgres:%s@%s:%d" ($pgPassword | b64dec) .Values.metricsCollector.timescale.name (.Values.metricsCollector.timescale.containerPort | int)) | b64enc | quote }}
