Send postgres url to api-v2
Co-authored-by: David Spigarelli <david@thoras.ai>

--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -43,7 +43,7 @@ spec:
               secretKeyRef:
                 name: thoras-timescale-password
                 key: host
-          - name: DATABASE_URL
+          - name: SERVICE_POSTGRESQL_DSN
             value: "$(DATABASE_HOST)/thoras"
           - name: "ELASTICSEARCH_URL"
             valueFrom:
