Set default field for forecast_buffer_percentage

--- a/charts/thoras/templates/crd/aiscaletarget.yaml
+++ b/charts/thoras/templates/crd/aiscaletarget.yaml
@@ -286,6 +286,7 @@ spec:
                       x-kubernetes-int-or-string: true
                     forecast_buffer_percentage:
                       x-kubernetes-int-or-string: true
+                      default: "0"
                 reasoning:
                   type: object
                   required:
