Default forecast_blocks to 15m

--- a/charts/thoras/templates/crd/aiscaletarget.yaml
+++ b/charts/thoras/templates/crd/aiscaletarget.yaml
@@ -284,6 +284,7 @@ spec:
                         - type: integer
                         - type: string
                       x-kubernetes-int-or-string: true
+                      default: "15m"
                     forecast_buffer_percentage:
                       x-kubernetes-int-or-string: true
                       default: "0"
