added init to start of metrics collector

--- a/charts/thoras/templates/collector/deployment.yaml
+++ b/charts/thoras/templates/collector/deployment.yaml
@@ -127,6 +127,7 @@ spec:
             # run any migrations, accounting for upgrade/downgrade scenarios
             ./scripts/migrate_database.sh
         {{- end}}
+            ./metrics-collector init
             ./metrics-collector collect -c 60
         env:
           - name: THORAS_NS
