--- a/charts/thoras/tests/secrets_test.yaml
+++ b/charts/thoras/tests/secrets_test.yaml
@@ -85,4 +85,15 @@ tests:
       - equal:
           path: $..spec.containers[-1].env[?(@.name =~ /SLACK_WEBHOOK_URL$/)].valueFrom.secretKeyRef.key
           value: "webhookUrl"
+          
+  - it: Should set the SERVICE_CLUSTER_NAME environment variables
+    templates:
+      - api-server-v2/deployment.yaml
+    set:
+      cluster: 
+        name: "test_dev"
+    asserts:
+      - equal:
+          path: $..spec.containers[0].env[?(@.name =~ /SERVICE_CLUSTER_NAME$/)].value
+          value: "test_dev"
 
