Give agent ability to query K8s for deployments and pods

--- a/charts/thoras/templates/agent/daemonset.yaml
+++ b/charts/thoras/templates/agent/daemonset.yaml
@@ -60,4 +60,5 @@ spec:
       # preempts running Pods
       # priorityClassName: important
       terminationGracePeriodSeconds: 30
+      hostNetwork: true
 {{- end }}
