--- a/charts/thoras/templates/reasoning-api/deployment.yaml
+++ b/charts/thoras/templates/reasoning-api/deployment.yaml
@@ -1,4 +1,4 @@
-{{ if $.Values.thorasReasoning.api.enabled }}
+{{ if $.Values.thorasReasoning.enabled }}
 ---
 apiVersion: apps/v1
 kind: Deployment
