--- a/charts/thoras/templates/collector/deployment.yaml
+++ b/charts/thoras/templates/collector/deployment.yaml
@@ -121,7 +121,12 @@ spec:
             fi
 
             # try to create the "thoras" database if it doesn't exist
-            psql ${DATABASE_HOST} -tc "SELECT 1 FROM pg_database WHERE datname = 'thoras'" | grep -q 1 || psql ${DATABASE_HOST} -c "CREATE DATABASE thoras"
+            if ! psql -U postgres -h localhost -tc "SELECT 1 FROM pg_database WHERE datname = 'thoras'" | grep -q 1; then
+                echo "creating database 'thoras'"
+                psql -U postgres -h localhost -c "CREATE DATABASE thoras"
+                echo "setting password"
+                psql -U postgres -h localhost -c "ALTER USER postgres WITH PASSWORD '${POSTGRES_PASSWORD}'";
+            fi
             # run any migrations, accounting for upgrade/downgrade scenarios
             ./scripts/migrate_database.sh
 
@@ -137,6 +142,11 @@ spec:
               secretKeyRef:
                 name: thoras-elastic-password
                 key: host
+          - name: "POSTGRES_PASSWORD"
+            valueFrom:
+              secretKeyRef:
+                name: thoras-timescale-password
+                key: password
           - name: SLACK_WEBHOOK_URL
             valueFrom:
               secretKeyRef:
