--- a/charts/thoras/templates/collector/cronjob.yaml
+++ b/charts/thoras/templates/collector/cronjob.yaml
@@ -32,6 +32,18 @@ spec:
                 value: "{{ .Values.metricsCollector.slackErrorsEnabled | default .Values.slackErrorsEnabled }}"
               - name: "LOGLEVEL"
                 value: {{ default .Values.logLevel .Values.metricsCollector.purge.logLevel }}
+              - name: "POSTGRES_PASSWORD"
+                valueFrom:
+                  secretKeyRef:
+                    name: thoras-timescale-password
+                    key: password
+              - name: DATABASE_HOST
+                valueFrom:
+                  secretKeyRef:
+                    name: thoras-timescale-password
+                    key: host
+              - name: DATABASE_URL
+                value: "$(DATABASE_HOST)/thoras?sslmode=disable"
             command: ["/bin/sh", "-c"]
             args:
               - |
