--- a/charts/thoras/Chart.yaml
+++ b/charts/thoras/Chart.yaml
@@ -16,3 +16,8 @@ type: application
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
 version: 4.15.4
+
+dependencies:
+- name: kuberay-operator
+  version: "1.2.2"
+  repository: "https://ray-project.github.io/kuberay-helm/"
