--- a/charts/thoras/templates/agent/daemonset.yaml
+++ b/charts/thoras/templates/agent/daemonset.yaml
@@ -41,6 +41,20 @@ spec:
             value: {{ .Values.thorasAgent.frequency | quote }}
           - name: "SERVICE_PORT"
             value: {{ .Values.thorasAgent.containerPort | quote }}
+          - name: SERVICE_SLACK_WEBHOOK_URL
+            valueFrom:
+              secretKeyRef:
+            {{- if and .Values.slackWebhookUrlSecretRefName .Values.slackWebhookUrlSecretRefKey }}
+                name: {{ .Values.slackWebhookUrlSecretRefName }}
+                key: {{ .Values.slackWebhookUrlSecretRefKey }}
+            {{- else }}
+                name: thoras-slack
+                key: webhookUrl
+            {{- end }}
+          - name: SERVICE_SLACK_ERRORS_ENABLED
+            value: "{{ .Values.thorasAgent.slackErrorsEnabled | default .Values.slackErrorsEnabled }}"
+          - name: SERVICE_CLUSTER_NAME
+            value: "{{ .Values.cluster.name }}"
         ports:
           - containerPort: {{ .Values.thorasAgent.containerPort }}
         resources:
