--- a/charts/thoras/templates/monitor-v2/deployment.yaml
+++ b/charts/thoras/templates/monitor-v2/deployment.yaml
@@ -31,7 +31,7 @@ spec:
         command: ["/app/monitor"]
         env:
           - name: SERVICE_LOG_LEVEL
-            value: {{ default .Values.logLevel .Values.thorasMonitor.logLevel }}
+            value: {{ .Values.thorasMonitorV2.logLevel | default .Values.thorasMonitor.logLevel | default .Values.logLevel | quote }}
           - name: SERVICE_SLACK_WEBHOOK_URL
             valueFrom:
               secretKeyRef:
@@ -43,7 +43,7 @@ spec:
                 key: webhookUrl
             {{- end }}
           - name: SERVICE_SLACK_ERRORS_ENABLED
-            value: "{{ .Values.thorasMonitor.slackErrorsEnabled | default .Values.slackErrorsEnabled }}"
+            value: "{{ .Values.thorasMonitorV2.slackErrorsEnabled | default .Values.thorasMonitor.slackErrorsEnabled | default .Values.slackErrorsEnabled }}"
           - name: SERVICE_CLUSTER_NAME
             value: "{{ .Values.cluster.name }}"
 {{- end }}
