--- a/charts/thoras/templates/collector/deployment.yaml
+++ b/charts/thoras/templates/collector/deployment.yaml
@@ -170,5 +170,5 @@ spec:
             value: "$(DATABASE_HOST)/thoras?sslmode=disable"
           - name: SERVICE_POSTGRESQL_DSN
             value: "$(DATABASE_HOST)/thoras?sslmode=disable"
-          - name: "SERVICE_LOGLEVEL"
+          - name: "SERVICE_LOG_LEVEL"
             value: {{ default .Values.logLevel .Values.metricsCollector.collector.logLevel }}
