--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -91,7 +91,7 @@ spec:
             value: "http://thoras-reasoning-api.thoras.svc.cluster.local"
           - name: SERVICE_SLACK_ERRORS_ENABLED
             value: "{{ .Values.thorasApiServerV2.slackErrorsEnabled | default .Values.slackErrorsEnabled }}"
-          - name: "SERVICE_LOGLEVEL"
+          - name: "SERVICE_LOG_LEVEL"
             value: {{ default .Values.logLevel .Values.thorasApiServerV2.logLevel }}
           - name: "SERVICE_PROMETHEUS_API_URL"
             value: {{ .Values.thorasReasoning.connectors.prometheus.baseUrl }}
