--- a/charts/thoras/templates/collector/deployment.yaml
+++ b/charts/thoras/templates/collector/deployment.yaml
@@ -159,7 +159,7 @@ spec:
             value: "{{ .Values.cluster.name }}"
           - name: SERVICE_LOG_LEVEL
             value: {{ default .Values.logLevel .Values.metricsCollector.collector.logLevel }}
-          - name: API_BASE_URL
+          - name: SERVICE_THORAS_API_BASE_URL
             value: "http://thoras-api-server-v2"
           - name: DATABASE_HOST
             valueFrom:
